--- a/cpp/test/hello.html
+++ b/cpp/test/hello.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
-<html lang="ja">
+<!doctype html>
+
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>make3D</title>
-    <script src=hello.js></script>
+    <meta charset="utf-8">
+    <title>昆布</title>
 </head>
 
 <body>
 
+
+    <script src="hello.js">
+        
+    </script>
 </body>
 
 </html>
