wasm classの受け渡しのテスト

--- a/cpp/test/hello.html
+++ b/cpp/test/hello.html
@@ -10,9 +10,9 @@
 <body>
 
 
-    <script src="hello.js">
-        
-    </script>
+    <script src="hello.js"></script>
+    <script src="hello2.js"></script>
+
 </body>
 
 </html>
