jsの描画ってわりかし高速

--- a/cpp/test/hello.html
+++ b/cpp/test/hello.html
@@ -9,7 +9,7 @@
 
 <body>
 
-
+    <canvas id="test_canvas" width="1280" height="720"></canvas>
     <script src="hello.js"></script>
     <script src="hello2.js"></script>
 
