--- a/make3D.html
+++ b/make3D.html
@@ -4,15 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta id="viewport" content="width=device-width, initial-scale=1.0">
     <title>make3D</title>
 
 </head>
 
 <body>
-    <canvas id="test_canvas" width="1280" height="720"></canvas>
+
+
+    <canvas id="view_canvas" width="1280" height="720"></canvas><br />
+
+
+    <p>頂点データ</p><br />
+    <select id="vertex_select" size="10">
+    </select><br />
+
+    <p>頂点を入力してください</p><br />
+    <p id="now_vertex_control">現在操作中:</p><br />
+    <p>tag</p>
+    <input type="text" id="vertex_add_textbox_tag"></p>
+    <p>x</p>
+    <input type="number" id="vertex_add_textbox_x"></p>
+    <p>y</p>
+    <input type="number" id="vertex_add_textbox_y"></p>
+    <p>z</p>
+    <input type="number" id="vertex_add_textbox_z"></p>
+    <input type="button" value="確定" onclick="vertex_addvalue();" /><br />
+
+    <p>面リストデータ</p><br />
+    <select id="surface_list_select" size="10">
+    </select><br />
+
+    <p>個別面データ</p><br />
+    <p id="now_surface_list_control">現在操作中:</p><br />
+    <select id="surface_select" size="10">
+    </select><br />
+
     <script src=make3D.js></script>
     <script src=cpp/forjs/wasm_forweb.js></script>
+
 </body>
 
 </html>
+
+<!-
+    https: //www.tagindex.com/html_tag/form/select.html
+    ->
