--- a/make3D.html
+++ b/make3D.html
@@ -35,6 +35,9 @@
     <select id="surface_list_select" size="10">
     </select><br />
 
+    <input type="button" value="面リストに追加する" onclick="surface_addvertex();" /><br />
+
+
     <p>個別面データ</p><br />
     <p id="now_surface_list_control">現在操作中:</p><br />
     <select id="surface_select" size="10">
@@ -49,4 +52,5 @@
 
 <!-
     https: //www.tagindex.com/html_tag/form/select.html
+    https://emscripten.org/docs/porting/connecting_cpp_and_javascript/embind.html
     ->
