リファクタリングする

--- a/make3D.html
+++ b/make3D.html
@@ -10,15 +10,9 @@
 </head>
 
 <body>
-
-
     <canvas id="view_canvas" width="1280" height="720"></canvas><br />
-
-
-
     <p>頂点データ</p><br />
-    <select id="vertex_select" onchange="select_vertex_for_tagxyz();" size="10">
-    </select><br />
+    <select id="vertex_select" onchange="select_vertex_for_tagxyz();" size="10"></select><br />
 
     <p>頂点を入力してください</p><br />
     <p id="now_vertex_control">現在操作中:</p><br />
