ポインタ渡しに失敗してますね・・・

--- a/make3D.html
+++ b/make3D.html
@@ -41,8 +41,11 @@
     </select><br />
 
     <p>検証用</p><br />
+    <p>survey_surface_key</p>
     <input type="text" id="survey_surface_key"></p><br />
+    <p>survey_vertex_key</p>
     <input type="text" id="survey_vertex_key"></p><br />
+    <p>survey_vertex_number</p>
     <input type="number" id="survey_vertex_number"></p><br />
     <input type="button" value="検証" onclick="consistency_survey();" /><br />
 
