移動の下地

--- a/make3D.html
+++ b/make3D.html
@@ -56,6 +56,7 @@
     <script src=js/vertex.js></script>
     <script src=js/view.js></script>
     <script src=js/survey.js></script>
+    <script src=js/user_operation.js></script>
     <script src=make3D.js></script>
     <script src=cpp/forjs/wasm_forweb.js></script>
 
