--- a/make3D.html
+++ b/make3D.html
@@ -13,6 +13,13 @@
     <canvas id="view_canvas" width="1280" height="720"></canvas><br />
     <input type="button" value="描画" onclick="view_run();" /><br />
 
+    <p>w 視点移動 上へ</p><br />
+    <p>s 視点移動 下へ</p><br />
+    <p>a 視点移動 左へ</p><br />
+    <p>d 視点移動 右へ</p><br />
+    <p>f 拡大</p><br />
+    <p>g 縮小</p><br />
+
     <p>頂点データ</p><br />
     <select id="vertex_select" onchange="select_vertex_for_tagxyz();" size="10"></select><br />
 
