--- a/salt_self/src/index.html
+++ b/salt_self/src/index.html
@@ -9,7 +9,12 @@
 
 </head>
 
-<div id="root"></div>
+<body>
+    <div id="root"></div>
+
+</body>
+
+
 <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.10.3/babel.min.js"></script>
