--- a/salt_self/src/index.html
+++ b/salt_self/src/index.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html lang="ja">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>しおだよ！！！！！！！！！！！！！！！！</title>
+  </head>
 
-</head>
+  <body>
+    <!-- <script>
+    var salt3D_for_js_interface;
+      var Module = {
+        onRuntimeInitialized: function () {
+          salt3D_for_js_interface = new Module.ForJsInterface();
+          console.log("import salt3D_for_js_interface");
+        },
+      };
+      console.log("salt3D_for_js_interface",salt3D_for_js_interface);
+    </script>
+    <script src=cpp/forjs/wasm_forweb.js></script> -->
 
-<body>
     <div id="root"></div>
+  </body>
 
-</body>
-
-
-<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.10.3/babel.min.js"></script>
-
-<script>
+  <script
+    src="https://unpkg.com/react@16/umd/react.development.js"
+    crossorigin
+  ></script>
+  <script
+    src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
+    crossorigin
+  ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.10.3/babel.min.js"></script>
+  <!-- <script src="cpp/forjs/wasm_forweb.js"></script> -->
+</html>
