--- a/salt_self/public/index.html
+++ b/salt_self/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -24,10 +24,23 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>しおだよ！！！！！！！！！！！</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <script>
+      // var salt3D_for_js_interface;
+      //   var Module = {
+      //     onRuntimeInitialized: function () {
+      //       salt3D_for_js_interface = new Module.ForJsInterface();
+      //       console.log("import salt3D_for_js_interface");
+      //     },
+      //   };
+      //   console.log("salt3D_for_js_interface",salt3D_for_js_interface);
+      // </script>
+       <!-- <script src=wasm_forweb.js></script> -->
+  
     <div id="root"></div>
     <!--
       This HTML file is a template.
