mjs化してcomponentDidMount下でのcreateModule().then((Module) にしたら成功したかもしれない

--- a/salt_self/public/index.html
+++ b/salt_self/public/index.html
@@ -38,10 +38,16 @@
       //     },
       //   };
       //   console.log("salt3D_for_js_interface",salt3D_for_js_interface);
-      // </script>
-       <!-- <script src=wasm_forweb.js></script> -->
+      </script>
+       <!-- <script src="./src/App/Salt3DCG/cpp/forjs/wasm_forweb.js";></script> -->
   
     <div id="root"></div>
+    <!-- <script type=”text/javascript” src=./wasm_import.js></script>
+    <script type=”text/javascript” src=./wasm/wasm_forweb.js></script> -->
+    <!-- <script>
+      test_wasm()
+    </script> -->
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
