--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<!doctype html><html lang="ja"><script>!function(n){if("/"===n.search[1]){var a=n.search.slice(1).split("&").map((function(n){return n.replace(/~and~/g,"&")})).join("?");window.history.replaceState(null,null,n.pathname.slice(0,-1)+a+n.hash)}}(window.location)</script><head><meta charset="utf-8"/><link rel="icon" href="%PUBLIC_URL%/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/><link rel="manifest" href="%PUBLIC_URL%/manifest.json"/><title>しおだよ！！！！！！！！！！！</title><script defer="defer" src="/main.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><script></script><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="ja">
+  <script>
+    !(function (n) {
+      if ("/" === n.search[1]) {
+        var a = n.search
+          .slice(1)
+          .split("&")
+          .map(function (n) {
+            return n.replace(/~and~/g, "&");
+          })
+          .join("?");
+        window.history.replaceState(
+          null,
+          null,
+          n.pathname.slice(0, -1) + a + n.hash
+        );
+      }
+    })(window.location);
+  </script>
+  <head>
+    <meta charset="utf-8" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <title>しおだよ！！！！！！！！！！！</title>
+    <script defer="defer" src="/main.js"></script>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script></script>
+    <div id="root"></div>
+  </body>
+</html>
