--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <title>しおだよ！！！！！！！！！！！</title>
-    <script defer="defer" src="./main.js"></script>
+    <script defer="defer" src="main.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
