--- a/salt_self/public/index.html
+++ b/salt_self/public/index.html
@@ -1,5 +1,36 @@
 <!DOCTYPE html>
 <html lang="ja">
+  <!-- Start Single Page Apps for GitHub Pages -->
+  <script type="text/javascript">
+    // Single Page Apps for GitHub Pages
+    // MIT License
+    // https://github.com/rafgraph/spa-github-pages
+    // This script checks to see if a redirect is present in the query string,
+    // converts it back into the correct url and adds it to the
+    // browser's history using window.history.replaceState(...),
+    // which won't cause the browser to attempt to load the new url.
+    // When the single page app is loaded further down in this file,
+    // the correct url will be waiting in the browser's history for
+    // the single page app to route accordingly.
+    (function (l) {
+      if (l.search[1] === "/") {
+        var decoded = l.search
+          .slice(1)
+          .split("&")
+          .map(function (s) {
+            return s.replace(/~and~/g, "&");
+          })
+          .join("?");
+        window.history.replaceState(
+          null,
+          null,
+          l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    })(window.location);
+  </script>
+  <!-- End Single Page Apps for GitHub Pages -->
+
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -38,9 +69,9 @@
       //     },
       //   };
       //   console.log("salt3D_for_js_interface",salt3D_for_js_interface);
-      </script>
-       <!-- <script src="./src/App/Salt3DCG/cpp/forjs/wasm_forweb.js";></script> -->
-  
+    </script>
+    <!-- <script src="./src/App/Salt3DCG/cpp/forjs/wasm_forweb.js";></script> -->
+
     <div id="root"></div>
     <!-- <script type=”text/javascript” src=./wasm_import.js></script>
     <script type=”text/javascript” src=./wasm/wasm_forweb.js></script> -->
